Source/WebCore/style/StyleSharingResolver.h
@@ -25,6 +25,7 @@
 
 #pragma once
 
+#include "Styleable.h"
 #include <wtf/HashMap.h>
 
 namespace WebCore {
@@ -47,7 +48,7 @@ class SharingResolver {
 public:
     SharingResolver(const Document&, const ScopeRuleSets&, const SelectorFilter&);
 
-    std::unique_ptr<RenderStyle> resolve(const Element&, const Update&);
+    std::unique_ptr<RenderStyle> resolve(const Styleable&, const Update&);
 
 private:
     struct Context;
